# SolumDraw

./: .gitignore  README.md  patch_solumdraw_analyzer_benchmark_v1.py  patch_solumdraw_analyzer_benchmark_v2.py  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  solumdraw_cv_jni.cpp
app/src/main/java/com/solum/draw/: MainActivity.java
app/src/main/java/com/solum/draw/analyze/: AnalysisLayers.java  AnalysisVisualReport.java  AnalyzerBenchmark.java  AnalyzerPostProcessor.java  ColorCount.java  ComponentRoleMap.java  DrawingIntentAnalysis.java  EvidenceProfile.java  EvidenceResult.java  ImageAnalysis.java  ImageAnalyzer.java  ImageFeatures.java  MultiEvidenceAnalyzer.java  SceneArtHeuristic.java  UiLayoutAnalysis.java
app/src/main/res/values/: strings.xml  styles.xml
docs/: ARCHITECTURE.md  OLD_GARTIC_DONOR_AUDIT.md  RECONSTRUCTION_ENGINE_PLAN.md  ROADMAP.md  SOLUMDRAW_ANALYZER_BENCHMARK_V1.md  SOLUMDRAW_ANALYZER_BENCHMARK_V2.md  SOLUMDRAW_ANALYZER_V3_WORKFLOW.md  SOLUMDRAW_FULL_ROADMAP_RU.md  SOLUMDRAW_MASTER_PLAN.md  SOLUMDRAW_VISION_LIBRARIES_RU.md  TERMUX_BUILD.md
tools/: dataset_hard_cleaner_v1.py  gallery_manifest_example.tsv  solumdraw_analyzer_benchmark_v1.py  solumdraw_analyzer_benchmark_v2.py  solumdraw_benchmark_report_v1.py  solumdraw_benchmark_zip_latest.py  solumdraw_cv_probe.py  solumdraw_dataset_guard.py  solumdraw_dataset_v4_1_clean_refill.py  solumdraw_dataset_validate_v1.py  solumdraw_gallery_collector_v1.py  solumdraw_gallerydl_config_example.json  solumdraw_meigen_probe_v1.py
(+46 files in other folders)
